experiments/ocp-route-paths-echo/src/deployment/deployment_login.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-proxy
  namespace: echo-oidc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-proxy
  template:
    metadata:
      labels:
        app: login-proxy
    spec:
      containers:
        - name: redirect-handler
          image: registry.tannerjc.net/echo-route-paths/redirect-handler:latest
          ports:
            - containerPort: 4181
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:latest
          args:
            - --provider=oidc
            - --client-id=echo-login
            - --client-secret=mDCFOqO20flpFzpmR1gS2bVTV2aMf45Y
            - --oidc-issuer-url=https://keycloak.tannerjc.net/realms/echo-realm
            - --cookie-secret=abcdefghijklm12345678901
            - --cookie-domain=foo.bar.com
            - --cookie-path=/
            - --email-domain=*
            - --upstream=static://202
            - --http-address=0.0.0.0:4180
            - --redirect-url=https://foo.bar.com/login/oauth2/callback
            - --proxy-prefix=/login
            - --skip-auth-route=/login
            - --skip-auth-route=/login/oauth2/callback

            - --set-authorization-header=true
            - --pass-access-token=true


            - --request-logging=true
            - --auth-logging=true 
            - --show-debug-on-error=true
          ports:
            - containerPort: 4180
