experiments/ocp-route-paths-echo/src/deployment/echoa_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server-a
  namespace: echo-oidc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server-a
  template:
    metadata:
      labels:
        app: echo-server-a
    spec:
      containers:
      - name: echo-server
        image: registry.tannerjc.net/echo-route-paths/echo-server:latest
        ports:
        - containerPort: 5000
      - name: auth-check-proxy
        image: registry.tannerjc.net/echo-route-paths/auth-check-proxy:latest
        ports:
        - containerPort: 8080
