experiments/ocp-route-paths-echo/src/deployment/login_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-proxy
  namespace: echo-oidc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-proxy
  template:
    metadata:
      labels:
        app: login-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        ports:
        - containerPort: 4180
        args:
        - --provider=oidc
        - --http-address=0.0.0.0:4180

        # don't show the provider login page and instead just
        # go straight into the login sequence
        - --skip-provider-button=true

        # puts all normal http paths under /login to conform
        # with how this overall routing architecture works
        # https://oauth2-proxy.github.io/oauth2-proxy/features/endpoints?_highlight=prefix
        # - --proxy-prefix=/login/oauth2
        - --proxy-prefix=/login

        #  basic cookie and xss stuff ...
        - --cookie-secure=true
        - --cookie-secret=abcdefghijklm12345678901
        - --cookie-domain=foo.bar.com
        - --cookie-path=/
        - --email-domain=*
        #- --cookie-samesite=lax

        # basic oidc setup ...
        - --oidc-issuer-url=https://keycloak.tannerjc.net/realms/echo-realm
        - --client-id=echo-login
        - --client-secret=mDCFOqO20flpFzpmR1gS2bVTV2aMf45Y
        - --scope=openid profile email

        # this is going to be sent up to the IDP during login,
        # so it has to be valid ...
        #- --redirect-url=https://foo.bar.com/login/oauth2/callback
        - --redirect-url=https://foo.bar.com/login/callback

        # The upstream for a sidecar is normally localhost:XXXX
        # because it's in the same pod / network namespace, but
        # as a central service what is the correct "upstream" ?
        #- --upstream=static://202

        - --set-xauthrequest=true
        - --set-authorization-header=true
        - --pass-access-token=true

        #- --skip-auth-route=^/login.*
        - --skip-auth-route=/login/oauth2/callback
        #- --skip-auth-route=/login
        - --auth-logging=true
        #- --whitelist-domain=foo.bar.com
