experiments/ocp-route-paths-echo/src/deployment/login_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-proxy
  namespace: echo-oidc
spec:
  selector:
    app: login-proxy
  ports:
  - name: http
    port: 80
    targetPort: 4180
