experiments/ocp-route-paths-echo/src/deployment/service_a.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server-a
  namespace: echo-oidc
spec:
  selector:
    app: echo-server-a
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
