experiments/ocp-route-paths-echo/src/deployment/echoa_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: echo-server-a
  namespace: echo-oidc
spec:
  host: foo.bar.com
  path: /echo/a
  to:
    kind: Service
    name: echo-server-a
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
